--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
 1) controllare connessioni a DB - web.xml(?)
-2) fixare la retrieve della durata delle tratte
+2) gestire sessioni e cookies in base all'utente loggato
+3) aggiungere logica stato treno (ON TIME - DELAYED - CANCELLED - CONFIRMED - LANDED)
+4) aggiungere logica ruoli utenti (chi può vedere cosa - chi può modificare cosa)
+6) aggiungere .trim() alla validazione
